# cr8s

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2024-06-05-155222_create_crates/: up.sql
migrations/2024-06-12-121528_create_users/: up.sql
migrations/2024-06-12-121753_create_roles/: up.sql
migrations/2024-06-12-121820_create_users_roles/: up.sql
src/: commands.rs  lib.rs  mail.rs  main.rs  schema.rs
src/helpers/: auth.rs  mod.rs  route.rs  route_errors.rs
src/models/: crates.rs  mod.rs  models.rs  roles.rs  rustaceans.rs  user_roles.rs  users.rs
src/respositories/: crate_repository.rs  mod.rs  repositories.rs  role_repository.rs  rustacean_respository.rs  user_repository.rs
src/routes/: authorization.rs  cors.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
