[package]
name = "cr8s"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
clap = "4.5.7"


[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
